--- a/color.css
+++ b/color.css
@@ -11,12 +11,12 @@ font-family: "Montserrat","Avenir";
 	background: purple;
 	padding-bottom: 30%;
 	float: left;
-	margin: 1.66%;
-	border-radius: 40px;
+	margin: 1.5%;
+	border-radius: 10px;
 	transition: background .5s;
 	-webkit-transition:background .5s;
 	=mpz-transition:background .5s;
-	outline: noone;
+	outline: silver;
 }
 
 #container{
@@ -26,18 +26,18 @@ font-family: "Montserrat","Avenir";
 }
 
 h1 {
-	color:white;
+	color:silver;
 	text-align: center;
-	background-color: steelblue;
+	background-color: #232323;
 	margin: 0px;
 	font-weight: normal;
-	text-transform: uppercase;
-	line-height: 1.1;
+	
+	line-height: 1;
 	padding: 20px 0;
 }
 
 #stripe {
-	background: white;
+	background: silver;
 	height: 30px;
 	text-align: center;
 	color: black;
@@ -48,23 +48,23 @@ h1 {
 }
 
 #colorDisplay {
-	font-size: 200%;
+	font-size: 150%;
 }
 button {
 	border: none;
-	background-color: none;
-	text-transform: uppercase;
+	background-color: silver;
+	text-transform: 1uppercase;
 	height: 100%;
-	font-weight: 700;
-	color: steelblue;
+	font-weight: 700px;
+	color: #232323;
 	letter-spacing: 1px;
 	font-size: inherit;
 	transition: all .5s;
 }
 
 button:hover {
-	color:white;
-	background-color: steelblue;
+	color:silver;
+	background-color: #232323;
 }
 
 #message {
