--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 
 
-body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
+body, h1,h2,h3,h4,h5,h6, pre{font-family: "Montserrat", sans-serif}
 .w3-row-padding img {margin-bottom: 12px}
 /* Set the width of the sidebar to 120px */
 .w3-sidebar {width: 120px;background: #222;}
@@ -162,4 +162,23 @@ line-height: 30px;
 
 a{
   text-decoration: none;
+}
+
+
+pre {
+  white-space:pre-wrap;
+}
+
+#resume-links {
+  margin-bottom:0;
+  padding:0;
+ 
+  font-size: 0px;
+}
+
+ul a {
+  margin:0;
+  padding:0;
+  display: inline-block;
+  font-size: 16px;
 }
